<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">吉方</string>

    <string name="splash_name">吉方能力系统</string>
    <string name="guide_talents">匹配开发人才</string>
    <string name="guide_talents_content">解决项目开发难题</string>
    <string name="guide_depts">专业开发团队</string>
    <string name="guide_depts_content">为项目开发保驾护航</string>
    <string name="guide_projects">参考开发项目</string>
    <string name="guide_projects_content">开发方案事半功倍</string>
    <string name="enter">立即进入</string>
    <string name="login_username_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="loading">加载中</string>
    <string name="login_bottom">吉方信息科技有限公司</string>
    <string name="login_empty_username">用户名不能为空</string>
    <string name="login_empty_password">密码不能为空</string>
    <string name="login_invalid_username">用户名不匹配，请重新输入</string>
    <string name="login_invalid_password">密码不匹配，请重新输入</string>

    <string name="login_failed_content">账号与密码不匹配，请重新输入。</string>
    <string name="network_failed_content">服务器繁忙</string>
    <string name="login_no_network">网络连接失败，请稍后重试！</string>
    <string name="refresh">刷新</string>
    <string name="refresh_content">解决方法</string>
    <string name="title">标题</string>
    <string name="message">消息</string>
    <string name="alert_title">温馨提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>


    <string name="home">首页</string>
    <string name="home_project_info_title">Treker出行</string>
    <string name="home_project_person">项目负责人</string>
    <string name="home_project_person_content">Ryan</string>
    <string name="home_project_type">项目类型</string>
    <string name="home_project_type_content1">交通出行</string>
    <string name="home_project_type_content2">-</string>
    <string name="home_project_type_content3">学校交通出行</string>
    <string name="home_project_task">任务下达</string>
    <string name="home_project_task_date" tools:ignore="TypographyDashes">2021-07-28</string>
    <string name="home_project_review">输入评审</string>
    <string name="home_project_review_date" tools:ignore="TypographyDashes">2021–08-28</string>
    <string name="home_project_achievement">成果归档</string>
    <string name="home_project_achievement_date" tools:ignore="TypographyDashes">2021-09-28</string>
    <string name="home_project_archive">项目归档</string>
    <string name="home_project_think_tank">人才</string>
    <string name="home_project_think_tank_star">*</string>
    <string name="home_project_professional_department">部门</string>
    <string name="default_department">研发部</string>
    <string name="default_kind">交通出行</string>
    <string name="default_tag">Android</string>
    <string name="home_similar_projects">项目</string>
    <string name="home_project_detail">项目详情</string>
    <string name="home_undertaking_department">承接部门</string>
    <string name="home_undertaking_department_content">研发部</string>
    <string name="home_project_type_content">交通出行</string>
    <string name="home_project_subtype">项目子型</string>
    <string name="home_project_subtype_content">校车出行</string>
    <string name="home_project_item_no">项目序号</string>
    <string name="home_project_scale">项目规模</string>
    <string name="home_project_location">项目所在地</string>
    <string name="home_project_location_content">美国加利福尼亚州</string>
    <string name="home_project_team_members">项目组团队成员</string>
    <string name="home_project_team_members_content">（12人）</string>
    <string name="home_project_scale_content">上百万的下载量</string>
    <string name="home_project_item_no_content">20180823</string>
    <string name="home_depts_detail">部门详情</string>
    <string name="home_dept_head">部门负责人</string>
    <string name="home_depts_archived">归档的项目</string>
    <string name="home_talents_detail">人才详情</string>
    <string name="home_dept_member">部门成员</string>
    <string name="home_depts_detail_member_list">成员列表</string>
    <string name="home_projects_detail_member_list">成员列表</string>
    <string name="home_network_error_content">你暂时没参与到任何项目。</string>
    <string name="network_error_content">网络被外星人中断了</string>
    <string name="network_error_content2">尝试刷新或设置网络</string>
    <string name="home_bottom_text">到底了</string>
    <string name="colon">:</string>
    <string name="call">呼叫</string>
    <string name="default_phone">15989084722</string>

    <string name="search">搜索</string>
    <string name="search_no_result01">暂无“</string>
    <string name="search_no_result02">“搜索结果</string>
    <string name="search_result">搜索结果</string>
    <string name="search_history">搜索历史</string>
    <string name="search_talents">人才</string>
    <string name="search_projects">项目</string>
    <string name="search_result_history1">交通</string>
    <string name="search_result_history2">规划</string>
    <string name="search_result_history3">设计</string>
    <string name="search_result_history4">你好</string>
    <string name="search_empty">搜索不能为空</string>
    <string name="search_talents_tip">人才已加载完</string>
    <string name="search_projects_tip">项目已加载完</string>
    <string name="search_talents_more">查看更多</string>
    <string name="search_projects_more">查看更多</string>
    <string name="search_project_detail_title">Treker项目</string>

    <string name="think_tank">智库</string>
    <string name="think_tank_talents">人才</string>
    <string name="think_tank_projects">项目</string>
    <string name="phone">呼叫</string>

    <string name="my">我的</string>
    <string name="default_my">刘</string>
    <string name="my_project">参与的项目</string>
    <string name="my_project_content">Treker项目</string>
    <string name="my_setting">设置</string>
    <string name="my_tags">个人标签</string>
    <string name="my_edit">编辑</string>
    <string name="my_no_tags">暂无标签</string>
    <string name="my_edit_tags">编辑标签</string>
    <string name="my_professional_attributes">专业属性</string>
    <string name="my_knowledge_expertise">知识专长</string>
    <string name="my_plan_varieties">规划品种</string>
    <string name="my_special_plan_object">规划对象</string>
    <string name="my_work_interest">工作特长</string>
    <string name="my_skills">应用技能</string>
    <string name="app_version">版本信息</string>
    <string name="app_version_name">V1.0.8版本</string>
    <string name="app_version_content">主要功能：首页，智库，我的</string>
    <string name="app_date">发布日期</string>
    <string name="app_date_content" tools:ignore="TypographyDashes">2021-09-09</string>
    <string name="logout">退出</string>
    <string name="logout_title">退出登录</string>
    <string name="logout_content">确定退出系统?</string>

    <string name="no_history">暂无记录</string>
    <string name="no_depts_leader_history">暂无部门负责人记录</string>
    <string name="no_depts_team_members_history">暂无部门成员记录</string>
    <string name="no_projects_team_members_history">暂无团队成员记录</string>
    <string name="network_error_reload_content1">网络连接超时</string>
    <string name="network_error_reload_content2">单击下面的刷新按钮重试</string>
    <string name="token_error_tip">温馨提示</string>
    <string name="http_error_content">网络连接失败，请稍后重试！</string>
    <string name="response_error_content">服务器繁忙，请稍后重试！</string>
    <string name="token_error_content">登录信息异常，请重新登录！</string>
    <string name="network_error">未检测到网络</string>
    <string name="network_error_fixed">点击查看解决方法</string>
    <string name="network">网络</string>
    <string name="network_sub_title">未能检连接到互联网</string>
    <string name="network_tip1">您的设备未启用移动网络或无线局域网</string>
    <string name="network_tip2">如需要连接到互联网，请参考以下几点：</string>
    <string name="network_tip3">检查手机中的无线局域网设置，查看是否有可接入的无线局域网信号。</string>
    <string name="network_tip4">检查手机是否已接入移动网络，并且手机没有被停机。</string>
    <string name="network_tip5">如果您已接入无线局域网：</string>
    <string name="network_tip6">请检查您所连接的无线局域网热点是否已接入互联网，或该热点是否已允许您的设备访问互联网。</string>
</resources>