<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_home_search_projects"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_textview"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_search_projects_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        tools:text="@string/search_project_detail_title"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_search_projects_kind_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_project_think_tank_star"
            android:textColor="@color/colorPrimary"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_search_projects_depts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_search_projects_kind_star2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_project_think_tank_star"
            android:textColor="@color/colorPrimary"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_project_person"
            android:textSize="11sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/colon"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_search_projects_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/home_project_person_content"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>