<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPage"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_my_app_version_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/toolbarTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/colorToolbarText"
            android:textSize="23sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/bg_white_radius"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            tools:text="@string/app_version_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/app_version_content"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/tv_app_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_date"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/app_date_content"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>