<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_think_tank_projects_rv_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_white_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_think_tank_projects_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/home_project_info_title"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_project_person"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_think_tank_projects_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            tools:text="@string/home_project_person_content"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_project_think_tank_star"
            android:textSize="10sp"
            android:textColor="@color/colorPrimary"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_think_tank_projects_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_project_think_tank_star"
            android:textSize="10sp"
            android:textColor="@color/colorPrimary"
            tools:ignore="SmallSp" />
    </LinearLayout>

</LinearLayout>