<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:drawablePadding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/bg_textview"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:padding="10dp"
                android:paddingRight="10dp"
                android:textCursorDrawable="@drawable/et_cursor_color"
                android:textSize="15sp"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry" />

            <ToggleButton
                android:id="@+id/toggleClear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/clear"
                android:padding="10dp"
                android:textOff=""
                android:textOn=""
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/colorLoginEditText" />

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingRight="10dp"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry" />

            <ToggleButton
                android:id="@+id/togglePwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/toggle_pwd_selector"
                android:padding="10dp"
                android:textOff=""
                android:textOn=""
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/bg_blue_radius"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp">

    </Button>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/login_bottom"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

</LinearLayout>